# risu-rs

./: .gitignore  CODE_OF_CONDUCT.markdown  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  rollups.toml
.github/workflows/: ci.yml  coverage.yml
docker/: README.md
docs/: NEWS.markdown  known_issues.markdown  rollups.example.toml
docs/install_guides/: README.markdown
docs/site/: index.html
migrations/00000000000001_create_schema/: down.sql  up.sql
migrations/00000000000002_create_attachments/: up.sql
migrations/00000000000002_create_plugin_metadata/: down.sql  up.sql
migrations/00000000000003_create_patches/: down.sql  up.sql
migrations/00000000000004_create_policy_tables/: down.sql  up.sql
migrations/00000000000004_create_references/: down.sql  up.sql
migrations/00000000000004_create_service_descriptions/: down.sql  up.sql
migrations/00000000000005_create_attachments/: down.sql
migrations/00000000000005_create_policies/: down.sql  up.sql
migrations/00000000000006_create_references/: up.sql
migrations/00000000000007_add_rollup_finding/: down.sql  up.sql
migrations/00000000000008_add_attachment_hash_value/: down.sql  up.sql
migrations/00000000000009_create_versions/: up.sql
migrations/00000000000010_create_reports/: down.sql  up.sql
migrations/00000000000011_add_scanner/: down.sql  up.sql
migrations/00000000000012_update_policy_and_preferences/: down.sql  up.sql
scripts/: console_here  generate_rollups.py
src/: banner.rs  bug_report.rs  config.rs  console.rs  error.rs  graphs.rs  lib.rs  loader.rs  main.rs  migrate.rs  models.rs  parser.rs  persist.rs  plugin_index.rs  postprocess.rs  renderer.rs  schema.rs  template.rs  version.rs
src/analysis/: risk.rs
src/graphs/: host_severity_counts.rs  malware.rs  mod.rs  os_distribution.rs  top_vuln.rs  vuln_category.rs  vulns_by_service.rs  windows_os.rs
tests/: assets.rs  cli.rs  graphs.rs  migrate.rs  parser.rs  postprocess.rs  rtf.rs  severity_overrides.rs  stig_detailed.rs  template_validation.rs  templates.rs
tools/: checksum.rs  generate_rollups_toml.rs  nessus_generator.rs
(+123 files in other folders)
