[package]
name = "risu-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
diesel = { version = "2.2", features = ["sqlite", "chrono", "r2d2", "64-column-tables"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
