cargo-features = ["edition2024"]

[package]
name = "risu-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
diesel = { version = "2.2", features = ["sqlite", "chrono", "r2d2", "64-column-tables"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
quick-xml = "0.31"
libloading = "0.7"
printpdf = "0.5"
inventory = "0.3"
csv = "1.3"
plotters = { version = "0.3", features = ["full_palette"] }
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
regex = "1.10"
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "1.0"
rustyline = "13"
rusqlite = { version = "0.29", features = ["bundled"] }
rustc_version_runtime = "0.3"
cargo-lock = "10.1"
lazy_static = "1.5"
ipnet = "2.9"
sys-info = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"
